--- a/Globomantics/Globomantics.csproj
+++ b/Globomantics/Globomantics.csproj
@@ -13,6 +13,8 @@
   <ItemGroup>
     <Folder Include="Services\" />
     <Folder Include="Controllers\" />
+    <Folder Include="wwwroot\img\" />
+    <Folder Include="wwwroot\css\" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Http" Version="2.2.2" />
